fix: lable translation and header z-index

--- a/src/components/MainHeader/MainHeader.module.css
+++ b/src/components/MainHeader/MainHeader.module.css
@@ -7,7 +7,7 @@
   border-bottom: 1px solid #d0d0d0;
   position: sticky;
   top: 0;
-  z-index: 2;
+  z-index: 10;
 }
 
 .headerButtons {
